home page banner

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -1,8 +1,8 @@
 {
   "title": "عبدالرؤوف الدبيل",
   "seo": {
-    "title": "مطور تطبيقات الويب محترف",
-    "description": "مطور تطبيقات الويب محترف",
-    "alt": "تطبيقات الويب محترف"
+    "title": "مهندس برمجيات وتطبيقات الويب",
+    "description": "مهندس برمجيات وتطبيقات الويب",
+    "keywords": ""
   }
 }
