--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,8 +1,8 @@
 {
   "title": "Abdulraoof Aldabil",
   "seo": {
-    "title": "Senior Web Developer",
-    "description": "Senior Web Developer",
-    "alt": "Senior Web Developer"
+    "title": "Senior Web Developer | Abdulraoof Aldabil",
+    "description": "I'm a Senior web developer, Javascript developer, and fullstack web developer, I can help you make your ideas become true!",
+    "keywords": "web developer, web, developer, javascript, react, nextjs, electron"
   }
 }
