--- a/src/i18n/locales/ar/home.json
+++ b/src/i18n/locales/ar/home.json
@@ -8,5 +8,7 @@
   "years": "سنوات من الخبرة",
   "projects": "مشاريع متعددة",
   "about_me": "معلومات عني",
-  "recent_projects": "آخر المشاريع"
+  "recent_projects": "آخر المشاريع",
+  "about_me_1": "مطور ويب محترف، قمت بتطوير العديد من الواجهات الأمامية، مثل منصات التجارة الإلكترونية، منصات حجوزات تذاكر، وكذلك تطبيقات سطح المكتب.",
+  "about_me_2": "لدي شغف لتطوير واجهات مستخدم جميلة ومتطورة ومنفذة بشكل مبتكر."
 }
