--- a/src/i18n/locales/en/home.json
+++ b/src/i18n/locales/en/home.json
@@ -8,5 +8,7 @@
   "years": "Years",
   "projects": "Projects",
   "about_me": "About Me",
-  "recent_projects": "Recent Projects"
+  "recent_projects": "Recent Projects",
+  "about_me_1": "A Senior web developer based in Riyadh, Saudi Arabia. I have developed many types of front-ends, such as E-commerce platforms, ticketing platforms, as well as desktop applications.",
+  "about_me_2": "I'm passionate about cutting-edge, pixel-perfect, beautiful interfaces and intuitively implemented UIs."
 }
