--- a/src/i18n/locales/ar/home.json
+++ b/src/i18n/locales/ar/home.json
@@ -10,5 +10,6 @@
   "about_me": "معلومات عني",
   "recent_projects": "آخر المشاريع",
   "about_me_1": "مطور ويب محترف، قمت بتطوير العديد من الواجهات الأمامية، مثل منصات التجارة الإلكترونية، منصات حجوزات تذاكر، وكذلك تطبيقات سطح المكتب.",
-  "about_me_2": "لدي شغف لتطوير واجهات مستخدم جميلة ومتطورة ومنفذة بشكل مبتكر."
+  "about_me_2": "لدي شغف لتطوير واجهات مستخدم جميلة ومتطورة ومنفذة بشكل مبتكر.",
+  "download_cv": "السيرة الذاتية"
 }
