Button and banner

--- a/apps/next/src/i18n/locales/ar/home.json
+++ b/apps/next/src/i18n/locales/ar/home.json
@@ -11,5 +11,6 @@
   "recent_projects": "آخر المشاريع",
   "about_me_1": "مطور ويب محترف، قمت بتطوير العديد من الواجهات الأمامية، مثل منصات التجارة الإلكترونية، منصات حجوزات تذاكر، وكذلك تطبيقات سطح المكتب.",
   "about_me_2": "لدي شغف لتطوير واجهات مستخدم جميلة ومتطورة ومنفذة بشكل مبتكر.",
-  "download_cv": "السيرة الذاتية"
+  "download_cv": "السيرة الذاتية",
+  "visit_project": "عرض المشروع"
 }
