--- a/apps/next/src/i18n/locales/en/home.json
+++ b/apps/next/src/i18n/locales/en/home.json
@@ -11,5 +11,6 @@
   "recent_projects": "Recent Projects",
   "about_me_1": "A Senior web developer based in Riyadh, Saudi Arabia. I have developed many types of front-ends, such as E-commerce platforms, ticketing platforms, as well as desktop applications.",
   "about_me_2": "I'm passionate about cutting-edge, pixel-perfect, beautiful interfaces and intuitively implemented UIs.",
-  "download_cv": "Download CV"
+  "download_cv": "Download CV",
+  "visit_project": "Visit Project"
 }
