--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -7,5 +7,15 @@
       "2": "يحتوي على نظام إدارة الفترات الزمنية المتقدمة. سيستكشف الحضور بسهولة الفترات الزمنية المتاحة لعروض وفعاليات معرض \"نيوم ذا لاين\" المثيرة. ستضمن هندستنا الخلفية الدقيقة تحديثات في الوقت الفعلي حول توافر فترات الزمن، مما يتيح للمستخدمين حجز أماكنهم بثقة وسهولة."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "wtcr": {
+    "title": "سباق السعودية للفعاليات الرياضية العالمية للسيارات (WTCR)",
+    "subtitle": "",
+    "description": {
+      "1": "يظهر موقع سباق السعودية للفعاليات الرياضية العالمية للسيارات كوجهة شاملة لشراء تذاكر حدث WTCR المثير للأدرينالين. بواجهة سهلة الاستخدام، يضمن الموقع عملية حجز سلسة وخالية من المتاعب لهواة سباقات السيارات من جميع أنحاء العالم. يمكن للمستخدمين التنقل بسهولة من خلال فئات التذاكر المختلفة، بدءًا من التذاكر العادية إلى حزم VIP، والتي صُممت لتلبية تفضيلات المشجعين المتنوعة.",
+      "2": "يعد ميزة اختيار المقاعد المبتكرة أحد أهم ميزات موقع سباق السعودية للفعاليات الرياضية العالمية للسيارات. تتجاوز هذه الميزة الجديدة مفهوم شراء التذاكر التقليدي، مما يتيح للمشجعين اختيار مقاعدهم المفضلة داخل موقع السباق. من خلال خريطة مقاعد تفاعلية، يمكن للمستخدمين تحديد نقاط الإطلالة المفضلة لديهم على طول الدائرة، مما يوفر تجربة شخصية وغامرة لم يسبق لها مثيل. يضع هذا الابتكار سلطة الاختيار مباشرة في أيدي المشاهدين، ممكنين إياهم من تخصيص مغامرتهم المشاهدة المثلى.",
+      "3": "الجهد المشترك بين الاتحاد السعودي للسيارات والدراجات النارية وبيننا نحن مطوري المنصة الإلكترونية للتذاكر يبرهن على التقاطع بين التميز الرياضي والتكنولوجيا المتقدمة. يُظهر هذا الجهد كيف يمكن أن تعزز التطورات في تطوير الويب والتصميم التجربة الشاملة للمشجعين. من خلال دمج إثارة رياضة السيارات مع سهولة شراء التذاكر عبر الإنترنت ومشاركة التفاعلية في اختيار المقاعد، يجسد موقع سباق السعودية للفعاليات الرياضية العالمية للسيارات مستقبل إدارة الفعاليات الرياضية."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
