--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -17,5 +17,15 @@
       "3": "الجهد المشترك بين الاتحاد السعودي للسيارات والدراجات النارية وبيننا نحن مطوري المنصة الإلكترونية للتذاكر يبرهن على التقاطع بين التميز الرياضي والتكنولوجيا المتقدمة. يُظهر هذا الجهد كيف يمكن أن تعزز التطورات في تطوير الويب والتصميم التجربة الشاملة للمشجعين. من خلال دمج إثارة رياضة السيارات مع سهولة شراء التذاكر عبر الإنترنت ومشاركة التفاعلية في اختيار المقاعد، يجسد موقع سباق السعودية للفعاليات الرياضية العالمية للسيارات مستقبل إدارة الفعاليات الرياضية."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "diriyah": {
+    "title": "موقع موسم الدرعية 2023",
+    "subtitle": "",
+    "description": {
+      "1": "في عالم يتلاقى فيه التكنولوجيا مع الخيال والواقع، أصبح العالم الافتراضي بوابة لتجربة الفعاليات الحقيقية الاستثنائية. يعتبر موقع موسم الدرعية 2023 مثالًا بارزًا على ذلك، حيث يقدم بوابة رقمية إلى عالم من الثقافة والترفيه والتراث. موسم الدرعية السنوي، الذي يُقام في مدينة الدرعية التاريخية في المملكة العربية السعودية، هو تقاطع للفن والرياضة والموسيقى والترفيه يجذب جمهورًا عالميًا. يعمل الموقع كدليل شامل، يوجِّه الزوار نحو مجموعة من التجارب التي تنتظرهم.",
+      "2": "موقع موسم الدرعية 2023 هو تحفة في التصميم، حيث يمزج بسلاسة بين الجماليات الحديثة والعناصر التقليدية. عند دخول الموقع، يتم انغماس الزوار على الفور في رحلة بصرية، مع صور مذهلة تلخص جوهر أجواء الدرعية.",
+      "3": "الهدف الرئيسي للموقع هو عرض مجموعة متنوعة من الفعاليات التي تشكل موسم الدرعية 2023. تقوم التقاويم التفاعلية للفعاليات، إلى جانب وصفوف شاملة وصور مقنعة، بتمكين الزوار من الانغماس في عالم من سباقات المحركات المثيرة، والحفلات المثيرة، والمعارض الثقافية، وأكثر من ذلك. سواء كان الحاضرون يبحثون عن رونق السباقات مثل سباق CORE Diriyah E-Prix 2023، أو إثارة مباراة SUPERCOPA DE ESPAÑA 2023، أو حتى مباراة الحقيقة بين جيك بول وتومي فيوري، يعمل الموقع كبوصلة توجيه تجاه تجارب لا تُنسى."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
