add Saudi Cup project

--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -27,5 +27,15 @@
       "3": "الهدف الرئيسي للموقع هو عرض مجموعة متنوعة من الفعاليات التي تشكل موسم الدرعية 2023. تقوم التقاويم التفاعلية للفعاليات، إلى جانب وصفوف شاملة وصور مقنعة، بتمكين الزوار من الانغماس في عالم من سباقات المحركات المثيرة، والحفلات المثيرة، والمعارض الثقافية، وأكثر من ذلك. سواء كان الحاضرون يبحثون عن رونق السباقات مثل سباق CORE Diriyah E-Prix 2023، أو إثارة مباراة SUPERCOPA DE ESPAÑA 2023، أو حتى مباراة الحقيقة بين جيك بول وتومي فيوري، يعمل الموقع كبوصلة توجيه تجاه تجارب لا تُنسى."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "saudicup": {
+    "title": "كأس السعودية موسم 2023",
+    "subtitle": "",
+    "description": {
+      "1": "كأس المملكة العربية السعودية، واحدة من أرقى الفعاليات في عالم سباقات الخيول، استطاعت دائمًا أن تلفت انتباه الهواة والمتفرجين من جميع أنحاء العالم. في موسمها لعام 2023، انطلق المنظمون في رحلة طموحة لإنشاء منصة حجز تذاكر عبر الإنترنت تمكن من تسهيل عملية حجز التذاكر وتعزيز تجربة الفعالية بشكل عام.",
+      "2": "انتهت أيام الطوابير الطويلة وعمليات شراء التذاكر المستهلكة للوقت. قدمت منصة حجز التذاكر عملية حجز مبسطة، مما سمح للمستخدمين باختيار خيارات المقاعد المرغوبة وعرض خرائط المقاعد التفاعلية واستكمال عملياتهم بسهولة. من خلال دمج بوابات الدفع الآمنة، تأكد المستخدمون من أن معلوماتهم الشخصية والمالية محمية بأمان.",
+      "3": "وبحكم أن تفضيلات كل شخص الحضور تعتبر فريدة، تضمنت منصة حجز التذاكر خيارات لتجارب شخصية. يمكن للحضور تخصيص باقاتهم، باختيارها من بين مجموعة من الخيارات مثل الوصول VIP، وأجنحة الضيافة، وسلع فعاليات حصرية. لم تضف هذه التخصيصات قيمة فقط، بل أيضًا خلقت شعورًا بالتميز للحضور."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
