--- a/apps/next/src/i18n/locales/en/projects.json
+++ b/apps/next/src/i18n/locales/en/projects.json
@@ -27,5 +27,15 @@
       "3": "A key objective of the website is to showcase the diverse array of events that constitute the Diriyah Season 2023. Interactive event calendars, accompanied by comprehensive descriptions and compelling visuals, allow visitors to delve deep into the world of heart-pounding motorsports, enthralling concerts, cultural exhibitions, and more. Whether attendees seek the adrenaline rush of motorsports like the CORE Diriyah E-Prix 2023, the excitement of the SUPERCOPA DE ESPAÑA 2023, or even the spectacle of The Truth match featuring Jake Paul vs. Tommy Fury, the website acts as a compass guiding them to unforgettable experiences."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "saudicup": {
+    "title": "The Saudi Cup 2023 Season",
+    "subtitle": "",
+    "description": {
+      "1": "The Saudi Cup, one of the most prestigious events in the horse racing world, has consistently captured the attention of enthusiasts and spectators from around the globe. In its 2023 season, the organizers embarked on an ambitious journey to create an immersive and user-friendly online ticketing platform that would not only streamline the ticket booking process but also enhance the overall event experience.",
+      "2": "Gone are the days of long queues and time-consuming ticket purchases. The ticketing platform offered a streamlined booking process, allowing users to select their desired seating options, view interactive seating charts, and complete their transactions seamlessly. By integrating secure payment gateways, users could rest assured that their personal and financial information remained protected.",
+      "3": "Understanding that each attendee's preferences are unique, the ticketing platform incorporated features for personalized experiences. Attendees could customize their packages, selecting from a range of options such as VIP access, hospitality suites, and exclusive event merchandise. This personalization not only added value but also created a sense of exclusivity for attendees."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
