project slug page

--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -1,4 +1,6 @@
 {
+  "visit_project": "زيارة المشروع",
+  "project_not_live": "تم إيقاف المشروع :(",
   "neom": {
     "title": "نيوم ذا لاين",
     "subtitle": "",
