--- a/apps/next/src/i18n/locales/en/projects.json
+++ b/apps/next/src/i18n/locales/en/projects.json
@@ -1,4 +1,6 @@
 {
+  "visit_project": "Visit Project",
+  "project_not_live": "Project is down :(",
   "neom": {
     "title": "Neom The Line Exhibition",
     "subtitle": "",
