breadcrupt and json+ld

--- a/apps/next/src/i18n/locales/ar/common.json
+++ b/apps/next/src/i18n/locales/ar/common.json
@@ -1,5 +1,7 @@
 {
   "title": "عبدالرؤوف الدبيل",
+  "home": "الرئيسية",
+  "projects": "المشاريع",
   "seo": {
     "title": "مهندس برمجيات وتطبيقات الويب",
     "description": "مهندس برمجيات وتطبيقات الويب",
