--- a/apps/next/src/i18n/locales/en/common.json
+++ b/apps/next/src/i18n/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "title": "Abdulraoof Aldabil",
+  "home": "Home",
+  "projects": "Projects",
   "seo": {
     "title": "Senior Web Developer | Abdulraoof Aldabil",
     "description": "I'm a Senior web developer, Javascript developer, and fullstack web developer, I can help you make your ideas become true!",
