--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -39,5 +39,14 @@
       "3": "وبحكم أن تفضيلات كل شخص الحضور تعتبر فريدة، تضمنت منصة حجز التذاكر خيارات لتجارب شخصية. يمكن للحضور تخصيص باقاتهم، باختيارها من بين مجموعة من الخيارات مثل الوصول VIP، وأجنحة الضيافة، وسلع فعاليات حصرية. لم تضف هذه التخصيصات قيمة فقط، بل أيضًا خلقت شعورًا بالتميز للحضور."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "sagp": {
+    "title": "سباق جائزة السعودية الكبرى للفورمولا 1 2023",
+    "subtitle": "",
+    "description": {
+      "1": "موقع سباق فورمولا 1 SAGP 2023 لبيع التذاكر ليس فقط عبارة عن ضمان مقاعد؛ إنه عبارة عن تجربة شاملة وحصرية للمشجعين. يتميز الموقع بمجموعة من الامتيازات التي تعزز الحزمة الكلية لحاملي التذاكر. من الوصول بأولوية إلى جلسات توقيع الأوتوغراف ولقاءات السائقين، إلى لمحات خلف الكواليس لعمليات الفرق في فورمولا 1، تستهدف الامتيازات كل من المشجعين العاشقين للرياضة والجدد في عالم السباقات.",
+      "2": "هذه الامتيازات لا تقدم فقط قيمة إضافية لشراء التذكرة، بل تخلق ذكريات وروابط دائمة بين المشجعين والرياضة. تم تصميم الموقع لتعزيز شعور بالمجتمع، حيث يمكن للمحبين مشاركة شغفهم بفورمولا 1 والمشاركة في تفاعلات لا تُنسى."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
