--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -48,5 +48,15 @@
       "2": "هذه الامتيازات لا تقدم فقط قيمة إضافية لشراء التذكرة، بل تخلق ذكريات وروابط دائمة بين المشجعين والرياضة. تم تصميم الموقع لتعزيز شعور بالمجتمع، حيث يمكن للمحبين مشاركة شغفهم بفورمولا 1 والمشاركة في تفاعلات لا تُنسى."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "misk": {
+    "title": "مسك مكان",
+    "subtitle": "",
+    "description": {
+      "1": "يقدم مسك مكان مجموعة شاملة من الأدوات التي تمكن منظمي الفعاليات من إنشاء وإدارة وتحليل فعالياتهم بسهولة. من صياغة تفاصيل الفعالية وإدارة قوائم الضيوف إلى تصميم شارات الفعاليات ورصد موافقات الفعاليات، يعتبر مسك مكان منصة شاملة تم تصميمها لتبسيط إدارة الفعاليات.",
+      "2": "إحدى ميزاته البارزة هي القدرة على تخصيص تفاصيل الفعاليات، مثل التواريخ والأوقات والأماكن، مما يضمن أن تتناسب كل فعالية تمامًا مع رؤيتك الفريدة. يمتد هذا المستوى من التخصيص أيضًا إلى إنشاء شارات الفعاليات، حيث يمكنك تصميم شارات احترافية تعكس هويتك البصرية.",
+      "3": "باختصار، مسك مكان ليس مجرد موقع ويب؛ بل هو شريكك الاستراتيجي في تنظيم الفعاليات. سواء كنت تخطط لاجتماع صغير أو مؤتمر كبير، واجهة المستخدم سهلة الاستخدام والميزات القوية والتحليلات المستندة إلى البيانات سترفع إدارة الفعاليات إلى مستويات جديدة. وداعاً لضغوط تنظيم الفعاليات واستقبل مستقبل الفعاليات بوجود مسك مكان. فعاليتك الناجحة التالية على بعد نقرة واحدة فقط!"
+    },
+    "technologies": "React,Next.js,Radix UI,TailwindCSS"
   }
 }
