--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -58,5 +58,14 @@
       "3": "باختصار، مسك مكان ليس مجرد موقع ويب؛ بل هو شريكك الاستراتيجي في تنظيم الفعاليات. سواء كنت تخطط لاجتماع صغير أو مؤتمر كبير، واجهة المستخدم سهلة الاستخدام والميزات القوية والتحليلات المستندة إلى البيانات سترفع إدارة الفعاليات إلى مستويات جديدة. وداعاً لضغوط تنظيم الفعاليات واستقبل مستقبل الفعاليات بوجود مسك مكان. فعاليتك الناجحة التالية على بعد نقرة واحدة فقط!"
     },
     "technologies": "React,Next.js,Radix UI,TailwindCSS"
+  },
+  "afcon": {
+    "title": "كأس أمم إفريقيا - المغرب 2023",
+    "subtitle": "",
+    "description": {
+      "1": "إحدى ميزات موقع كأس أمم إفريقيا 2023 البارزة هي خريطة المقاعد التفاعلية، التي غيّرت طريقة اختيار الجماهير لمقاعدهم تمامًا. ذهبت أيام اختيار التذاكر بشكل عشوائي. الآن، يمكن للجماهير استكشاف الخريطة المكانية للملعب بصريًا، وعرض المقاعد المتاحة في الوقت الحقيقي، واختيار مقاعدهم المفضلة. تلك الميزة لا تعزز فقط تجربة المستخدم العامة، بل تتيح للجماهير اتخاذ قرارات مستنيرة استنادًا إلى تفضيلاتهم، مما يضمن لهم الاستمتاع بالبطولة من المكان الأمثل.",
+      "2": "بتوقع الطلب العالي على تذاكر كأفون 2023، يقدم الموقع نظام انتظار آمن لشراء التذاكر. هذا النهج الابتكاري يمنع انهيار الموقع بسبب حركة المرور الزائدة ويضمن توزيع التذاكر بشكل عادل ومنتظم. تدخل الجماهير طابور الانتظار الافتراضي وتنتظر بصبر دورها، على علم بأن النظام مصمم لاستيعاب تدفق المستخدمين الضخم دون المساس بالأمان أو الأداء."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
