--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -67,5 +67,14 @@
       "2": "بتوقع الطلب العالي على تذاكر كأفون 2023، يقدم الموقع نظام انتظار آمن لشراء التذاكر. هذا النهج الابتكاري يمنع انهيار الموقع بسبب حركة المرور الزائدة ويضمن توزيع التذاكر بشكل عادل ومنتظم. تدخل الجماهير طابور الانتظار الافتراضي وتنتظر بصبر دورها، على علم بأن النظام مصمم لاستيعاب تدفق المستخدمين الضخم دون المساس بالأمان أو الأداء."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "awwal": {
+    "title": "الأول بارك - موسم نادي النصر 2023/24",
+    "subtitle": "",
+    "description": {
+      "1": "يتيح موقع الأول بارك خدمات مخصصة لجميع المشجعين، سواء كانوا حاملي تذاكر موسمية ملتزمين أو مشجعين. بالإضافة إلى عروض خاصية الشراء المبكر، يوفر الموقع وصولًا ملائمًا إلى مبيعات تذاكر الموسم لأولئك الذين يرغبون في حضور كل مباراة. بالنسبة لأولئك الذين يرغبون في حضور مباريات معينة، تتوفر تذاكر المباريات الفردية أيضًا، مما يضمن أن الجميع يمكنهم المشاركة في الحماس.",
+      "2": "من خلال هذا الموقع، يلتزم نادي النصر بتعزيز تجربة المشجع، من لحظة شراء التذاكر إلى صافرة النهاية في كل مباراة. واجهة المستخدم سهلة الاستخدام، وخرائط المقاعد التفاعلية، ونظام الطابور الآمن، والعروض الحصرية تظهر التفاني الكبير للنادي في خلق لحظات لا تُنسى لأنصاره."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
