--- a/apps/next/src/i18n/locales/ar/common.json
+++ b/apps/next/src/i18n/locales/ar/common.json
@@ -1,5 +1,7 @@
 {
   "title": "عبدالرؤوف الدبيل",
+  "en": "English",
+  "ar": "العربية",
   "home": "الرئيسية",
   "projects": "المشاريع",
   "seo": {
