--- a/apps/next/src/i18n/locales/en/common.json
+++ b/apps/next/src/i18n/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "title": "Abdulraoof Aldabil",
+  "en": "English",
+  "ar": "العربية",
   "home": "Home",
   "projects": "Projects",
   "seo": {
