--- a/apps/next/src/i18n/locales/ar/common.json
+++ b/apps/next/src/i18n/locales/ar/common.json
@@ -4,6 +4,16 @@
   "ar": "العربية",
   "home": "الرئيسية",
   "projects": "المشاريع",
+  "all_projects": "جميع المشاريع",
+  "help": {
+    "title": "أقدر أساعدك في",
+    "technical": "الخبرة التقنية",
+    "technical_desc": "المساعدة في اختيار وتنفيذ الحلول التقنية المناسبة للمشروع، والقيام بتحسين الأداء، والقابلية للتوسع والصيانة المستمرة. كمطور برمجيات وتطبيقات الويب بخبرة غنية خاصة في التجارة الإلكترونية وتطبيقات الويب، يمكنني مساعدتك في تحقيق أفكارك!",
+    "project": "التخطيط وإدارة المشاريع",
+    "project_desc": "التعاون لفهم متطلبات المشروع وإنشاء خريطة طريق لتطوير الواجهة الأمامية. العمل على تقدير الوقت والموارد المطلوبة لتطوير المشروع. توقع المخاطر المحتملة للمشروع ووضع خطط الطوارئ للحفاظ على المسار الصحيح وتنفيذ المشروع ضمن المخطط",
+    "continuous": "التحسين المستمر",
+    "continuous_desc": "تحليل بيانات الموقع لتحديد الفرص المتاحة للتحسين المستمر للواجهة الأمامية، وتعزيز ملاءمة الموقع وفعاليته. البقاء على اطلاع لأحدث الاتجاهات والتقنيات المتاحة لتوفير حلول تقنية أفضل للمشروع. تقديم التدريب والإرشاد للفرق الداخلية للشركات أو العملاء"
+  },
   "seo": {
     "title": "مهندس برمجيات وتطبيقات الويب",
     "description": "مهندس برمجيات وتطبيقات الويب",
