contact form WIP

--- a/apps/next/src/i18n/locales/ar/common.json
+++ b/apps/next/src/i18n/locales/ar/common.json
@@ -14,6 +14,34 @@
     "continuous": "التحسين المستمر",
     "continuous_desc": "تحليل بيانات الموقع لتحديد الفرص المتاحة للتحسين المستمر للواجهة الأمامية، وتعزيز ملاءمة الموقع وفعاليته. البقاء على اطلاع لأحدث الاتجاهات والتقنيات المتاحة لتوفير حلول تقنية أفضل للمشروع. تقديم التدريب والإرشاد للفرق الداخلية للشركات أو العملاء"
   },
+  "contact": {
+    "title": "التواصل",
+    "name": "الإسم الكريم",
+    "email": "البريد الإلكتروني",
+    "message": "الرسالة",
+    "send": "إرسال",
+    "success": "تم الإرسال بنجاح، شكراً لتواصلكم معنا"
+  },
+  "validation": {
+    "invalid_mobile": "رقم الجوال غير صحيح",
+    "invalid_value": "قيمة غير صحيحة",
+    "only_numbers": "يسمح بالأرقام فقط",
+    "invalid_email": "تحقق من البريد الإلكتروني",
+    "required": "مطلوب",
+    "min_number": "يجب أن يكون أعلى من {{min}}",
+    "max_number": "يجب أن يكون أقل من {{max}}",
+    "min_length": "الحد الأدنى {{min}}",
+    "max_length": "الحد الأعلى {{max}}",
+    "select_team": "يرجى إختيار فريقك المفضل",
+    "emails_not_match": "البريد الإلكتروني غير متطابق",
+    "passwords_not_match": "كلمة المرور غير متطابقة",
+    "invalid_password": "كلمة المرور مطابقة للشروط",
+    "password_length": "يجب ألا تقل عن {{length}} حروف",
+    "password_must_contain_letter": "يجب أن تحتوي كلمة المرور على حرف",
+    "password_must_contain_special": "يجب أن تحتوي كلمة المرور على رمز خاص ",
+    "password_must_contain_number": "يجب أن تحتوي كلمة المرور على رقم",
+    "min_age": "يجب أن يكون عمرك أكبر من {{age}} سنة"
+  },
   "seo": {
     "title": "مهندس برمجيات وتطبيقات الويب",
     "description": "مهندس برمجيات وتطبيقات الويب",
