--- a/apps/next/src/i18n/locales/en/common.json
+++ b/apps/next/src/i18n/locales/en/common.json
@@ -14,6 +14,34 @@
     "continuous": "Continuous Improvement",
     "continuous_desc": "Analyze website data to identify opportunities for continuous front-end improvement, enhancing the website's relevance and effectiveness. Stay up-to-date with the latest front-end development trends and technologies. Provide training and guidance to the internal front-end teams"
   },
+  "contact": {
+    "title": "Say Hi!",
+    "name": "Your Name",
+    "email": "Email",
+    "message": "Message",
+    "send": "Send",
+    "success": "Message sent successfully! I will get back to you as soon as possible."
+  },
+  "validation": {
+    "invalid_mobile": "Invalid mobile",
+    "invalid_value": "Invalid value",
+    "only_numbers": "Only numbers",
+    "invalid_email": "Invalid Email",
+    "required": "Required",
+    "min_number": "Should be greater than {{min}}",
+    "max_number": "Should be smaller than {{max}}",
+    "min_length": "Minimum {{min}}",
+    "max_length": "Maximum {{max}}",
+    "select_team": "Please select your favorite team",
+    "emails_not_match": "Emails do not match",
+    "passwords_not_match": "Passwords do not match",
+    "invalid_password": "Invalid password",
+    "password_length": "Should be at least {{length}} characters",
+    "password_must_contain_letter": "Should contain at least one letter",
+    "password_must_contain_special": "Should contain at least one special character",
+    "password_must_contain_number": "Should contain at least one number",
+    "min_age": "Minimum age is {{age}}"
+  },
   "seo": {
     "title": "Senior Web Developer | Abdulraoof Aldabil",
     "description": "I'm a Senior web developer, Javascript developer, and fullstack web developer, I can help you make your ideas become true!",
