finalize contact form

--- a/apps/next/src/i18n/locales/ar/common.json
+++ b/apps/next/src/i18n/locales/ar/common.json
@@ -20,7 +20,8 @@
     "email": "البريد الإلكتروني",
     "message": "الرسالة",
     "send": "إرسال",
-    "success": "تم الإرسال بنجاح، شكراً لتواصلكم معنا"
+    "success": "تم الإرسال بنجاح، شكراً لتواصلكم معنا",
+    "failed": "حدث خطأ أثناء الإرسال، يرجى المحاولة مرة أخرى"
   },
   "validation": {
     "invalid_mobile": "رقم الجوال غير صحيح",
@@ -42,9 +43,12 @@
     "password_must_contain_number": "يجب أن تحتوي كلمة المرور على رقم",
     "min_age": "يجب أن يكون عمرك أكبر من {{age}} سنة"
   },
+  "errors": {
+    "unexpected_error": "حدث خطأ غير متوقع، يرجى المحاولة مرة أخرى"
+  },
   "seo": {
     "title": "مهندس برمجيات وتطبيقات الويب",
-    "description": "مهندس برمجيات وتطبيقات الويب",
+    "description": "أنا مطور برمجيات وتطبيقات الويب، مطور جافاسكربت، ومطور تطبيقات الويب/سطح المكتب/الجوال، يمكنني مساعدتك في تحقيق أفكارك!",
     "keywords": ""
   }
 }
