--- a/apps/next/src/i18n/locales/ar/common.json
+++ b/apps/next/src/i18n/locales/ar/common.json
@@ -44,7 +44,8 @@
     "min_age": "يجب أن يكون عمرك أكبر من {{age}} سنة"
   },
   "errors": {
-    "unexpected_error": "حدث خطأ غير متوقع، يرجى المحاولة مرة أخرى"
+    "unexpected_error": "حدث خطأ غير متوقع، يرجى المحاولة مرة أخرى",
+    "404": "الصفحة غير موجودة"
   },
   "seo": {
     "title": "مهندس برمجيات وتطبيقات الويب",
