--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -76,5 +76,14 @@
       "2": "من خلال هذا الموقع، يلتزم نادي النصر بتعزيز تجربة المشجع، من لحظة شراء التذاكر إلى صافرة النهاية في كل مباراة. واجهة المستخدم سهلة الاستخدام، وخرائط المقاعد التفاعلية، ونظام الطابور الآمن، والعروض الحصرية تظهر التفاني الكبير للنادي في خلق لحظات لا تُنسى لأنصاره."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "fcwc": {
+    "title": "كأس العالم للأندية - 2023/24™",
+    "subtitle": "",
+    "description": {
+      "1": "موقع كأس العالم للأندية 2023/24 ليس مجرد منصة لحجز التذاكر؛ إنها بوابة إلى تجربة كرة القدم لا مثيل لها. من خلال خريطة المقاعد التفاعلية، ونظام الانتظار الآمن، وحجز القنوات الخاصة",
+      "2": "يُقدم موقع كأس العالم للأندية 2023/24 خاصية حجز عبر قنوات الخاصة. تتيح هذه الميزة للمشجعين حجز التذاكر من خلال قنوات حصرية، مما يوفر الوصول إلى مقاعد ممتازة وحزم الضيافة وعروض خاصة أخرى. من خلال تلبية تفضيلات متنوعة، يضمن الموقع أن يجد كل مشجع حزمة تذاكر تتناسب مع رغباته، مما يجعل البطولة حدثاً لا يُنسى لجميع الحضور."
+    },
+    "technologies": "React,Next.js,TailwindCSS"
   }
 }
