--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -85,5 +85,14 @@
       "2": "يُقدم موقع كأس العالم للأندية 2023/24 خاصية حجز عبر قنوات الخاصة. تتيح هذه الميزة للمشجعين حجز التذاكر من خلال قنوات حصرية، مما يوفر الوصول إلى مقاعد ممتازة وحزم الضيافة وعروض خاصة أخرى. من خلال تلبية تفضيلات متنوعة، يضمن الموقع أن يجد كل مشجع حزمة تذاكر تتناسب مع رغباته، مما يجعل البطولة حدثاً لا يُنسى لجميع الحضور."
     },
     "technologies": "React,Next.js,TailwindCSS"
+  },
+  "riyadhseason": {
+    "title": "موسم الرياض 2023/24",
+    "subtitle": "",
+    "description": {
+      "1": "يعتبر موقع ويب موسم الرياض 2023/24 مركزًا رقميًا، يوفر للزوار تجربة سلسة لاستكشاف العروض والفعاليات المتنوعة لهذا الحدث الاستثنائي. أثناء تصفح الموقع، سيجد المستخدمون كنزًا من المعلومات، بدءًا من التقويم الحدث الذي يحدد جدول الاحتفالات إلى رؤى مفصلة حول مختلف المناطق التي تشكل موسم الرياض.",
+      "2": "إحدى وظائف الموقع الرئيسية هي تكامله مع موقع webook.com، وهو منصة موثوقة لحجز التذاكر بشكل مريح وآمن. أثناء استكشاف الزوار لمجموعة الفعاليات والأنشطة المقدمة، يبسط الرابط المباشر إلى webook.com عملية حجز التذاكر، مما يسمح للمستخدمين بضمان مقاعدهم في العروض والتجارب الأكثر رغبة بسهولة."
+    },
+    "technologies": "React,Next.js,Contentful,CF Pages,TailwindCSS"
   }
 }
